# PBRRender-opengl

./: .gitignore  CMakeLists.txt  README.md  command.h  main.cpp  pyApi.cpp  pyiGen.py
backup/: (template)RenderQueue.h  Camera.h  Mesh.h  Model.h  Texture.h  Windowsystem.h  main.cpp
backup/texture(no sharedptr)/: Mesh.h  Model.h  Texture.h
include/: Camera.h  Framebuffer.h  GBuffer.h  Input.h  Mesh.h  Model.h  PBRRender.h  RenderQueue.h  Scene.h  Shader.h  Skybox.h  Texture.h  Windowsystem.h  root_directory.h
pbr/gltf_Cerberus/: Cerberus_LP.gltf
pbr/gltf_Cerberus_low/: Cerberus_LP.gltf
pythonTest/: render.py  renderPyApi.cp310-win_amd64.pyd  renderPyApi.lib  renderPyApi.pyi
shader/: 2.2.2.pbr.fs  image.fs
shader/G-Buffer/: deferred_shadingPBR.fs  g_buffer.fs
shader/PBR/: pbr.fs
